# piparegia-api

./: .gitignore  Dockerfile  LICENSE  README.md  package-lock.json  package.json
src/: app.js  routes.js  server.js
src/application/: index.js
src/application/controllers/: catalog.controller.js  category.controller.js  index.js  product.controller.js  variant.controller.js
src/domain/: Cargo.toml  LICENSE_MIT  domain.spec.js
src/domain/entities/: Cargo.toml
src/domain/entities/src/: lib.rs
src/domain/entities/src/products/: product.rs
src/domain/repositories/: Cargo.toml
src/domain/repositories/src/: lib.rs  product_repository.rs
src/domain/src/: lib.rs
src/domain/use_cases/: Cargo.toml
src/domain/use_cases/prototypes/: create-product-controller.js  define-in-js.js
src/domain/use_cases/src/: create_product_uc.rs  lib.rs
src/entities/: catalog.entitie.js  category.entitie.js  entitie.spec.js  index.js  product.entitie.js  variant.entitie.js
src/entities/value-objects/: index.js
src/errors/: entities-errors.js
src/helpers/: validator.js  validator.spec.js
src/prisma/: schema.prisma
src/prisma/migrations/20211120161239_init/: migration.sql
src/repositories/: catalog.repository.js  category.repository.js  index.js  product.repository.js  variant.repository.js
src/use-cases/: create-catalog.use_case.js  create-category.use_case.js  create-product.use_case.js  create-variant.use_case.js  find-all-catalogs.use_case.js  find-all-categories.use_case.js  find-all-products.use_case.js  find-all-variants.use_case.js  index.js  update-category.use_case.js
